# opengl-directVolumeRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  MSVCRun.bat  README.md  mingwRun.bat  premake5.lua
App/: App.vcxproj  App.vcxproj.filters  imgui.ini
App/resources/builtIn/: ColorMap.json
App/resources/shaders/example/: expSquare_frag.glsl  expSquare_vert.glsl  expTriangle_frag.glsl  expTriangle_vert.glsl
App/resources/shaders/rayCasting/: rayCastingFlat_frag.glsl  rayCastingFlat_vert.glsl  rayCasting_frag.glsl  rayProj_vert.glsl
App/resources/shaders/test/: texCube_frag.glsl  texCube_vert.glsl  texShader_frag.glsl  texShader_vert.glsl
App/resources/volume data/: fuel_64x64x64_uint8.raw
App/src/: RCApp.cpp
App/src/files/: datFile.cpp  datFile.h
App/src/layers/: vrRCLayer.cpp  vrRCLayer.h
GMM_GPU/: GMM_GPU.vcxproj  GMM_GPU.vcxproj.filters  imgui.ini
GMM_GPU/resources/shaders/compute/: calculateEntropyGlobalValueRange_comp.glsl  calculateEntropyPerBrick_comp.glsl  calculateGlobalHist_comp.glsl  calculateLocalHistEntropy_comp.glsl  calculateOctreeNodes_comp.glsl  calculateSGMMEntropy_comp.glsl  copyTexture_comp.glsl  reconstruct3DVolumeByAMR_comp.glsl  reconstruct3DVolume_comp.glsl  reconstructTBAMR_EntropyRange_comp.glsl  reconstructTBAMR_SGMM_comp.glsl  reconstructTBAMR_flag_comp.glsl  reconstructTBAMR_refine_comp.glsl  statisticalDownSampling_comp.glsl  statisticalMSE_comp.glsl  statisticalMSSIM_mean_comp.glsl  statisticalMSSIM_var2_comp.glsl
GMM_GPU/src/: gmmAPP.cpp
GMM_GPU/src/files/: GMM.cpp  GMM.h  GMMFile.cpp  GMMFile.h  lodepng.cpp  lodepng.h
GMM_GPU/src/layers/: GMMlayer.cpp  GMMlayer.h
GMM_GPU/src/utils/: EM_Util.h  threadPool.h
IOT/resources/shaders/: composite.fs  composite.vs  lamp.fs  lighting.fs  materials.fs  materials.vs  screen.fs  screen.vs
IOT/resources/shaders/TR/: composite.vs  solid.fs  solid.vs  transparent.fs  transparent.vs
IOT/src/: app.cpp
IOT/src/files/: mesh.h  model.h
IOT/src/layers/: vrIOTLayer.cpp  vrIOTLayer.h
include/glad/include/glad/: glad.h
include/utility/: base.h  camera.h  controller.h  ds_pod.h  frameBuffer.h  openglCheck.h  rawReader.h  shader.h  texture.h  tinydat.h  trackBall.h  trackBall_CHEN.h  util.h
resources/shaders/: rayCasting_frag.glsl  rayCasting_vert.glsl  rayIn_frag.glsl  rayIn_vert.glsl
shaders/: rayCasting_frag.glsl  rayCasting_frag_fixPoints.glsl  rayCasting_frag_test.glsl
src/: main.cpp
src/utility/: camera.cpp  frameBuffer.cpp  rawReader.cpp  shader.cpp  texture.cpp  tinydat.cpp
tinyVR/src/: tinyVR.h  vrpch.cpp  vrpch.h
tinyVR/src/platform/openGL/: vrOpenGLBuffer.cpp  vrOpenGLBuffer.h  vrOpenGLCompShader.cpp  vrOpenGLCompShader.h  vrOpenGLContext.cpp  vrOpenGLContext.h  vrOpenGLErrorHandle.cpp  vrOpenGLErrorHandle.h  vrOpenGLFrameBuffer.cpp  vrOpenGLFrameBuffer.h  vrOpenGLRendererAPI.cpp  vrOpenGLRendererAPI.h  vrOpenGLShader.cpp  vrOpenGLShader.h  vrOpenGLTexture.cpp  vrOpenGLTexture.h  vrOpenGLTextureImpl.hpp  vrOpenGLTextureImplUtil.cpp  vrOpenGLTextureImplUtil.h  vrOpenGLVertexArray.cpp  vrOpenGLVertexArray.h
tinyVR/src/platform/windows/: vrWindowsInput.cpp  vrWindowsInput.h  (+2 more)
(+69 files in other folders)
